prueba de archivo json

--- a/docs/usage_example.ipynb
+++ b/docs/usage_example.ipynb
@@ -72,6 +72,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yaml\n",
+    "\n",
+    "with open(\"example.yaml\", \"r\") as stream:\n",
+    "    try:\n",
+    "        print(yaml.safe_load(stream))\n",
+    "    except yaml.YAMLError as exc:\n",
+    "        print(exc)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -129,14 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "TAREA: hello_gx--2023-10-23 10:57:01,532-INFO-   Unnamed: 0  Producto 2023-07-01 2023-08-01 2023-09-01 2023-10-01  \\\n",
+      "TAREA: hello_gx--2023-11-08 10:12:56,062-INFO-   Unnamed: 0  Producto 2023-07-01 2023-08-01 2023-09-01 2023-10-01  \\\n",
       "0           0   9002263      237,0      700,0     3200,0     3200,0   \n",
       "\n",
       "  2023-11-01 2023-12-01 2024-01-01 2024-02-01 2024-03-01 2024-04-01  \\\n",
@@ -144,22 +159,13 @@
       "\n",
       "  2024-05-01 2024-06-01  \n",
       "0      336,0      224,0  \n",
-      "TAREA: hello_gx--2023-10-23 10:57:01,532-INFO-   Unnamed: 0  Producto 2023-07-01 2023-08-01 2023-09-01 2023-10-01  \\\n",
-      "0           0   9002263      237,0      700,0     3200,0     3200,0   \n",
-      "\n",
-      "  2023-11-01 2023-12-01 2024-01-01 2024-02-01 2024-03-01 2024-04-01  \\\n",
-      "0     3200,0     2920,0     2920,0      398,0      336,0      295,0   \n",
-      "\n",
-      "  2024-05-01 2024-06-01  \n",
-      "0      336,0      224,0  \n",
-      "TAREA: hello_gx--2023-10-23 10:57:01,549-INFO-hello there, iam a task_dq using great expectations\n",
-      "TAREA: hello_gx--2023-10-23 10:57:01,549-INFO-hello there, iam a task_dq using great expectations\n"
+      "TAREA: hello_gx--2023-11-08 10:12:56,067-INFO-hello there, iam a task_dq using great expectations\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9792fcf7d61644da89c72657282dae55",
+       "model_id": "8588908cd0924e2e8f39019578c472f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -174,7 +180,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "reporte de expectativas https://centraaldl.z13.web.core.windows.net/validations/hello_gx_expectation_suite/__none__/20231023T155701.835505Z/hello_gx_source-hello_gx_source_test.html\n"
+      "reporte de expectativas Se genera un archivo privado: $web/validations/hello_gx_expectation_suite/__none__/20231108T151256.403331Z/hello_gx_source. Visitar portal azure para acceder resultados.\n"
      ]
     }
    ],
@@ -186,12 +192,110 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Tambien se puede cargar expectativas desde un json almacenado."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from centraal_dataframework.tasks import task_dq\n",
+    "\n",
+    "@task_dq\n",
+    "def hello_gx_file(datalake, gx_toolkit, logger):\n",
+    "    \"\"\"Saluda al gx.\"\"\"\n",
+    "    source = datalake.read_csv(\"test/test_framework.csv\", sep=\"|\")\n",
+    "    logger.info(\"hello there, iam a task_dq using great expectations from a file\")\n",
+    "    # creaciones de expectativas\n",
+    "    url = gx_toolkit.run_expectation_file_on_df(source, \"test\", \"hello_gx_expectation_suite_json\")\n",
+    "    print(\"reporte de expectativas\", url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TAREA: hello_gx_file--2023-11-08 10:13:35,762-INFO-hello there, iam a task_dq using great expectations from a file\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "263c34d0ae914766a98803857443ca95",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Calculating Metrics:   0%|          | 0/8 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reporte de expectativas Se genera un archivo privado: $web/validations/hello_gx_expectation_suite_json/__none__/20231108T151335.778173Z/hello_gx_file_source. Visitar portal azure para acceder resultados.\n"
+     ]
+    }
+   ],
+   "source": [
+    "hello_gx_file()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Crear el modulo con la logica, en la siguiente celda se configura una logica de pandas."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Container/Path: $web/validations/hello_gx_expectation_suite_json/__none__/20231108T144828.004123Z/hello_gx_source\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# Define the URL\n",
+    "url = \"https://centraaldl.blob.core.windows.net/$web/validations/hello_gx_expectation_suite_json/__none__/20231108T144828.004123Z/hello_gx_source-hello_gx_source_test.html\"\n",
+    "\n",
+    "# Define a regular expression pattern to match the parts you want to extract\n",
+    "pattern = r\"https://[\\w.]+/([\\w$]+/[\\w/]+/[\\d]+T[\\d.]+Z)/([\\w-]+)-([\\w-]+)\\.html\"\n",
+    "\n",
+    "# Use re.search to find the matched groups in the URL\n",
+    "match = re.search(pattern, url)\n",
+    "\n",
+    "if match:\n",
+    "    # Extract the matched groups\n",
+    "    container_path = match.group(1) + \"/\" +  match.group(2)\n",
+    "\n",
+    "    # Print the extracted parts\n",
+    "    print(\"Container/Path:\", container_path)\n",
+    "else:\n",
+    "    print(\"No match found in the URL.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
