evitar el error de url match

--- a/docs/cyrstal.ipynb
+++ b/docs/cyrstal.ipynb
@@ -2,11 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Imports generales\n",
+    "#pysftp==0.2.9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports generales\n",
     "import pysftp\n",
     "import logging\n",
     "import sys\n",
@@ -14,62 +23,65 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "#Cargar directorio CDF y Configuraciones\n",
+    "# Cargar directorio CDF y Configuraciones\n",
     "sys.path.append('../')\n",
-    "from dotenv                                            import load_dotenv\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
     "load_dotenv()\n",
     "\n",
-    "#Importar CDF\n",
-    "from centraal_dataframework.resources                  import datalake\n",
+    "# Importar CDF\n",
+    "from centraal_dataframework.resources import datalake\n",
     "from great_expectations.core.expectation_configuration import ExpectationConfiguration\n",
-    "from centraal_dataframework.tasks                      import task_dq, task\n",
+    "from centraal_dataframework.tasks import task_dq, task\n",
     "\n",
-    "#Preparación de ambiente\n",
+    "# Preparación de ambiente\n",
     "logger = logging.getLogger()\n",
     "logger.setLevel(logging.INFO)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Traer Archivos SFTP\n",
+    "# Traer Archivos SFTP\n",
     "@task\n",
     "def get_scrapping_file(datalake, logger):\n",
-    "    #Variables\n",
+    "    # Variables\n",
     "    last_file_date = 0\n",
     "    last_file_name = ''\n",
     "    scrapping_file = None\n",
     "    csv_output_dir = os.environ['datalake_workdir'] + '/' + os.environ['scrapping_workdir'] + '/'\n",
-    "    #Abrir conexión\n",
+    "    # Abrir conexión\n",
     "    cnopts = pysftp.CnOpts()\n",
     "    cnopts.hostkeys = None\n",
-    "    sftp = pysftp.Connection(host     = os.environ['sftp_servidor'], \n",
-    "                             port     = int(os.environ['sftp_port']), \n",
-    "                             username = os.environ['sftp_usuario'], \n",
-    "                             password = os.environ['sftp_clave'], \n",
-    "                             cnopts   = cnopts)\n",
-    "    sftp.cwd(os.environ['sftp_raiz'])                         \n",
-    "    #Buscar el último archivo\n",
+    "    sftp = pysftp.Connection(\n",
+    "        host=os.environ['sftp_servidor'],\n",
+    "        port=int(os.environ['sftp_port']),\n",
+    "        username=os.environ['sftp_usuario'],\n",
+    "        password=os.environ['sftp_clave'],\n",
+    "        cnopts=cnopts,\n",
+    "    )\n",
+    "    sftp.cwd(os.environ['sftp_raiz'])\n",
+    "    # Buscar el último archivo\n",
     "    archivos = sftp.listdir_attr()\n",
     "    for archivo in archivos:\n",
     "        if archivo.longname[0] != 'd':\n",
     "            if archivo.st_atime > last_file_date:\n",
     "                last_file_date = archivo.st_atime\n",
     "                last_file_name = archivo.filename\n",
-    "    #Cargar el archivo al DataFrame\n",
+    "    # Cargar el archivo al DataFrame\n",
     "    with sftp.open(last_file_name) as sfile:\n",
-    "        scrapping_file = pd.read_csv(sfile, sep = ',', encoding = 'latin1')\n",
+    "        scrapping_file = pd.read_csv(sfile, sep=',', encoding='latin1')\n",
     "    sftp.close()\n",
-    "    #Escribimos el DataFrame en nuestro raw-zone\n",
-    "    datalake.write_csv(scrapping_file, csv_output_dir+'scrapping.csv', sep='|', index = False, encoding='latin1')"
+    "    # Escribimos el DataFrame en nuestro raw-zone\n",
+    "    datalake.write_csv(scrapping_file, csv_output_dir + 'scrapping.csv', sep='|', index=False, encoding='latin1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,9 +138,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "TAREA: scrapping_validate_prerequisites--2023-11-29 07:37:27,472-INFO-         date          canal category subcategory   subcategory2 subcategory3  \\\n",
+      "0  05/10/2023  Zara Colombia   Hombre      JERSEY  F. Jersey M/C          NaN   \n",
+      "\n",
+      "  marca   modelo        sku                   upc  ...     upc wm final price  \\\n",
+      "0  Zara  MarrÃ³n  275572806  275572806_MarrÃ³n_XL  ...  275572806    249000.0   \n",
+      "\n",
+      "     upc wm2 comp                                        composition  \\\n",
+      "0  275572806  NaN  Exterior: 100% poliÃ©ster: que contiene al men...   \n",
+      "\n",
+      "   homogenized_clothing homogenized_subcategory homogenized_category  \\\n",
+      "0             Chaquetas           Ropa exterior               Hombre   \n",
+      "\n",
+      "  homogenized_color made_in  \n",
+      "0             CafÃ©   China  \n",
+      "\n",
+      "[1 rows x 32 columns]\n",
+      "TAREA: scrapping_validate_prerequisites--2023-11-29 07:37:27,480-INFO-Validando prerrequisitos del archivo Scrapping...\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bf2124a470d84ebebfe76dc01b3d6b0d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Calculating Metrics:   0%|          | 0/8 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reporte de expectativas Se genera un archivo privado: /calidad-datos/validations/scrapping_validate_prerequisites_expectation_suite/__none__/20231129T123727.787594Z/scrapping_validate_prerequisites_source-scrapping_validate_prerequisites_source_SCRAPPING_MANDATORY.html. Visitar portal azure para acceder resultados.\n"
+     ]
+    }
+   ],
    "source": [
     "scrapping_validate_prerequisites()"
    ]
@@ -555,7 +612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
