--- a/docs/cyrstal.ipynb
+++ b/docs/cyrstal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,8 @@
     "from centraal_dataframework.resources import datalake\n",
     "from great_expectations.core.expectation_configuration import ExpectationConfiguration\n",
     "from centraal_dataframework.tasks import task_dq, task\n",
+    "from centraal_dataframework.excepciones import ErrorTareaCalidadDatos\n",
+    "from centraal_dataframework.resources import GreatExpectationsToolKit\n",
     "\n",
     "# Preparación de ambiente\n",
     "logger = logging.getLogger()\n",
@@ -43,7 +45,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'datalake_cleandir'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m/home/german/repos/centraal-dataframework/docs/cyrstal.ipynb Cell 3\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/german/repos/centraal-dataframework/docs/cyrstal.ipynb#X31sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m CONTENEDOR \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/german/repos/centraal-dataframework/docs/cyrstal.ipynb#X31sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m CONTENEDOR_DESITNO \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39;49menviron[\u001b[39m'\u001b[39;49m\u001b[39mdatalake_cleandir\u001b[39;49m\u001b[39m'\u001b[39;49m]\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/german/repos/centraal-dataframework/docs/cyrstal.ipynb#X31sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m WD \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39menviron[\u001b[39m'\u001b[39m\u001b[39mdatalake_workdir\u001b[39m\u001b[39m'\u001b[39m] \n",
+      "File \u001b[0;32m/usr/lib/python3.8/os.py:675\u001b[0m, in \u001b[0;36m_Environ.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    672\u001b[0m     value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_data[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mencodekey(key)]\n\u001b[1;32m    673\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n\u001b[1;32m    674\u001b[0m     \u001b[39m# raise KeyError with the original key value\u001b[39;00m\n\u001b[0;32m--> 675\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    676\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdecodevalue(value)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'datalake_cleandir'"
+     ]
+    }
+   ],
+   "source": [
+    "CONTENEDOR = \"\"\n",
+    "CONTENEDOR_DESITNO = os.environ['datalake_cleandir']\n",
+    "WD = os.environ['datalake_workdir'] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +80,7 @@
     "    last_file_date = 0\n",
     "    last_file_name = ''\n",
     "    scrapping_file = None\n",
-    "    csv_output_dir = os.environ['datalake_workdir'] + '/' + os.environ['scrapping_workdir'] + '/'\n",
+    "    csv_output_dir = f\"{CONTENEDOR}/{WD}\"\n",
     "    # Abrir conexión\n",
     "    cnopts = pysftp.CnOpts()\n",
     "    cnopts.hostkeys = None\n",
@@ -76,9 +102,9 @@
     "    # Cargar el archivo al DataFrame\n",
     "    with sftp.open(last_file_name) as sfile:\n",
     "        scrapping_file = pd.read_csv(sfile, sep=',', encoding='latin1')\n",
-    "    sftp.close()\n",
+    "        sftp.close()\n",
     "    # Escribimos el DataFrame en nuestro raw-zone\n",
-    "    datalake.write_csv(scrapping_file, csv_output_dir + 'scrapping.csv', sep='|', index=False, encoding='latin1')"
+    "    datalake.write_csv(scrapping_file, f\"{csv_output_dir}/scrapping.csv\", sep='|', index=False, encoding='latin1')"
    ]
   },
   {
@@ -88,61 +114,84 @@
    "outputs": [],
    "source": [
     "@task_dq\n",
-    "def scrapping_validate_prerequisites(datalake, gx_toolkit, logger):\n",
+    "def scrapping_validate_prerequisites(datalake, gx_toolkit: GreatExpectationsToolKit, logger):\n",
     "    \"\"\"Valida los pre-requisitos básicos del archivo de Scrapping\"\"\"\n",
-    "    csv_input_dir  = os.environ['datalake_workdir']  + '/' + os.environ['scrapping_workdir'] + '/'\n",
-    "    source = datalake.read_csv(csv_input_dir + \"scrapping.csv\", sep=\"|\", encoding = 'latin1')\n",
+    "    csv_input_dir = os.environ['datalake_workdir'] + '/' + os.environ['scrapping_workdir'] + '/'\n",
+    "    source = datalake.read_csv(csv_input_dir + \"scrapping.csv\", sep=\"|\", encoding='latin1')\n",
     "    logger.info(\"Validando prerrequisitos del archivo Scrapping...\")\n",
     "\n",
-    "    #Nombres de columnas\n",
+    "    # Nombres de columnas\n",
     "    scrapping_column_names = ExpectationConfiguration(\n",
     "        expectation_type=\"expect_table_columns_to_match_set\",\n",
     "        kwargs={\n",
-    "            \"column_set\":    [\"date\", \"canal\", \"category\", \"subcategory\", \"subcategory2\",\n",
-    "                            \"subcategory3\", \"marca\", \"modelo\", \"sku\", \"upc\", \"item\",\n",
-    "                            \"item characteristics\", \"url sku\", \"image\", \"price\", \"sale price\",\n",
-    "                            \"shipment cost\", \"sales flag\", \"store id\", \"store name\",\n",
-    "                            \"store address\", \"stock\", \"upc wm\", \"final price\", \"upc wm2\", \"comp\",\n",
-    "                            \"composition\", \"homogenized_clothing\", \"homogenized_subcategory\",\n",
-    "                            \"homogenized_category\", \"homogenized_color\", \"made_in\"\n",
-    "                            ],\n",
-    "            \"exact_match\":   True,\n",
-    "            \"result_format\": \"SUMMARY\"\n",
+    "            \"column_set\": [\n",
+    "                \"date\",\n",
+    "                \"canal\",\n",
+    "                \"category\",\n",
+    "                \"subcategory\",\n",
+    "                \"subcategory2\",\n",
+    "                \"subcategory3\",\n",
+    "                \"marca\",\n",
+    "                \"modelo\",\n",
+    "                \"sku\",\n",
+    "                \"upc\",\n",
+    "                \"item\",\n",
+    "                \"item characteristics\",\n",
+    "                \"url sku\",\n",
+    "                \"image\",\n",
+    "                \"price\",\n",
+    "                \"sale price\",\n",
+    "                \"shipment cost\",\n",
+    "                \"sales flag\",\n",
+    "                \"store id\",\n",
+    "                \"store name\",\n",
+    "                \"store address\",\n",
+    "                \"stock\",\n",
+    "                \"upc wm\",\n",
+    "                \"final price\",\n",
+    "                \"upc wm2\",\n",
+    "                \"comp\",\n",
+    "                \"composition\",\n",
+    "                \"homogenized_clothing\",\n",
+    "                \"homogenized_subcategory\",\n",
+    "                \"homogenized_category\",\n",
+    "                \"homogenized_color\",\n",
+    "                \"made_in\",\n",
+    "            ],\n",
+    "            \"exact_match\": True,\n",
+    "            \"result_format\": \"SUMMARY\",\n",
     "        },\n",
     "        meta={\n",
     "            \"notes\": {\n",
     "                \"format\": \"markdown\",\n",
-    "                \"content\": \"Las columnas del archivo de Scrapping no concuerdan con las esperadas\"\n",
+    "                \"content\": \"Las columnas del archivo de Scrapping no concuerdan con las esperadas\",\n",
     "            }\n",
-    "        }\n",
+    "        },\n",
     "    )\n",
     "\n",
-    "    #Price Not Null\n",
+    "    # Price Not Null\n",
     "    scrapping_price_notnull = ExpectationConfiguration(\n",
     "        expectation_type=\"expect_column_values_to_not_be_null\",\n",
-    "        kwargs={\n",
-    "            \"column\":        \"price\",\n",
-    "            \"result_format\": \"SUMMARY\"\n",
-    "        },\n",
+    "        kwargs={\"column\": \"price\", \"result_format\": \"SUMMARY\"},\n",
     "        meta={\n",
-    "            \"notes\": {\n",
-    "                \"format\": \"markdown\",\n",
-    "                \"content\": \"Algunos precios del archivo de Scrapping no están presentes\"\n",
-    "            }\n",
-    "        }\n",
+    "            \"notes\": {\"format\": \"markdown\", \"content\": \"Algunos precios del archivo de Scrapping no están presentes\"}\n",
+    "        },\n",
     "    )\n",
     "\n",
-    "    #EXECUTE EXPECTATIONS\n",
-    "    result = gx_toolkit.run_expectations_on_df(source, \"SCRAPPING_MANDATORY\", [scrapping_column_names, scrapping_price_notnull])\n",
+    "    # EXECUTE EXPECTATIONS\n",
+    "    url, result = gx_toolkit.run_expectations_on_df(\n",
+    "        source, \"SCRAPPING_MANDATORY\", [scrapping_column_names, scrapping_price_notnull]\n",
+    "    )\n",
     "    clear_output(wait=True)\n",
-    "    if result['status']:\n",
+    "    if result.success:\n",
     "        logger.info('Validación exitosa, se promueve a cleansed-zone')\n",
-    "        csv_output_dir = os.environ['datalake_cleandir'] + '/' + os.environ['scrapping_workdir'] + '/'\n",
-    "        datalake.write_csv(source, csv_output_dir+'scrapping.csv', sep=\"|\", encoding = 'latin1')\n",
+    "        logger.info(result['url'])\n",
+    "        csv_output_dir = f\"{CONTENEDOR_DESITNO}/{WD}/scrapping.csv\"\n",
+    "        datalake.write_csv(source, csv_output_dir, sep=\"|\", encoding='latin1')\n",
     "    else:\n",
     "        logger.info('ERROR: Validación fallida, se detiene el proceso.')\n",
     "        logger.info(result['url'])\n",
-    "    "
+    "        raise ErrorTareaCalidadDatos(result)"
    ]
   },
   {
@@ -773,7 +822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
