--- a/docs/cyrstal.ipynb
+++ b/docs/cyrstal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,6 @@
     "import pysftp\n",
     "import logging\n",
     "import sys\n",
-    "import yaml\n",
     "import os\n",
     "import pandas as pd\n",
     "\n",
@@ -37,6 +36,7 @@
     "from centraal_dataframework.tasks import task_dq, task\n",
     "from centraal_dataframework.excepciones import ErrorTareaCalidadDatos\n",
     "from centraal_dataframework.resources import GreatExpectationsToolKit\n",
+    "from centraal_dataframework.runner import Runner\n",
     "\n",
     "# Preparación de ambiente\n",
     "logger = logging.getLogger()\n",
@@ -45,26 +45,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'datalake_cleandir'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/home/german/repos/centraal-dataframework/docs/cyrstal.ipynb Cell 3\u001b[0m line \u001b[0;36m2\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/german/repos/centraal-dataframework/docs/cyrstal.ipynb#X31sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m CONTENEDOR \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/home/german/repos/centraal-dataframework/docs/cyrstal.ipynb#X31sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m CONTENEDOR_DESITNO \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39;49menviron[\u001b[39m'\u001b[39;49m\u001b[39mdatalake_cleandir\u001b[39;49m\u001b[39m'\u001b[39;49m]\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/home/german/repos/centraal-dataframework/docs/cyrstal.ipynb#X31sdnNjb2RlLXJlbW90ZQ%3D%3D?line=2'>3</a>\u001b[0m WD \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39menviron[\u001b[39m'\u001b[39m\u001b[39mdatalake_workdir\u001b[39m\u001b[39m'\u001b[39m] \n",
-      "File \u001b[0;32m/usr/lib/python3.8/os.py:675\u001b[0m, in \u001b[0;36m_Environ.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    672\u001b[0m     value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_data[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mencodekey(key)]\n\u001b[1;32m    673\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n\u001b[1;32m    674\u001b[0m     \u001b[39m# raise KeyError with the original key value\u001b[39;00m\n\u001b[0;32m--> 675\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    676\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdecodevalue(value)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'datalake_cleandir'"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "runner = Runner()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "CONTENEDOR = \"\"\n",
     "CONTENEDOR_DESITNO = os.environ['datalake_cleandir']\n",
-    "WD = os.environ['datalake_workdir'] "
+    "WD = os.environ['datalake_workdir']"
    ]
   },
   {
@@ -196,23 +192,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TAREA: scrapping_validate_prerequisites--2023-11-30 08:48:46,486-INFO-Validación exitosa, se promueve a cleansed-zone\n"
-     ]
-    }
-   ],
-   "source": [
-    "scrapping_validate_prerequisites()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -315,24 +294,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TAREA: scrapping_validate_column_contents--2023-11-30 08:50:16,403-INFO-WARNING: Validación fallida, continúa.\n",
-      "TAREA: scrapping_validate_column_contents--2023-11-30 08:50:16,403-INFO-Se genera un archivo privado: /calidad-datos\\validations/scrapping_validate_column_contents_expectation_suite/__none__/20231130T134943.620264Z/scrapping_validate_column_contents_source-scrapping_validate_column_contents_source_SCRAPPING_CONSISTENCE.html. Visitar portal azure para acceder resultados.\n"
-     ]
-    }
-   ],
-   "source": [
-    "scrapping_validate_column_contents()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
@@ -394,25 +355,6 @@
     "        logger.info('OTRAS: '+result_otras['url'])\n",
     "    csv_output_dir = os.environ['datalake_cleandir'] + '/' + os.environ['scrapping_workdir'] + '/'\n",
     "    datalake.write_csv(source, csv_output_dir+'scrapping.csv', sep=\"|\", encoding = 'latin1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TAREA: scrapping_validate_prices--2023-11-30 08:52:07,467-INFO-WARNING: Validación fallida, continúa.\n",
-      "TAREA: scrapping_validate_prices--2023-11-30 08:52:07,467-INFO-ZARA:  Se genera un archivo privado: /calidad-datos\\validations/scrapping_validate_prices_expectation_suite/__none__/20231130T135101.658058Z/scrapping_validate_prices_source-scrapping_validate_prices_source_SCRAPPING_PRECIOS_ZARA.html. Visitar portal azure para acceder resultados.\n",
-      "TAREA: scrapping_validate_prices--2023-11-30 08:52:07,469-INFO-OTRAS: Se genera un archivo privado: /calidad-datos\\validations/scrapping_validate_prices_expectation_suite/__none__/20231130T135134.803969Z/scrapping_validate_prices_source-scrapping_validate_prices_source_SCRAPPING_PRECIOS.html. Visitar portal azure para acceder resultados.\n"
-     ]
-    }
-   ],
-   "source": [
-    "scrapping_validate_prices()"
    ]
   },
   {
@@ -487,24 +429,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TAREA: marcaspropias_validate_column_contents--2023-11-30 08:53:20,780-INFO-WARNING: Validación fallida, continúa.\n",
-      "TAREA: marcaspropias_validate_column_contents--2023-11-30 08:53:20,781-INFO-Se genera un archivo privado: /calidad-datos\\validations/marcaspropias_validate_column_contents_expectation_suite/__none__/20231130T135247.788921Z/marcaspropias_validate_column_contents_source-marcaspropias_validate_column_contents_source_MARCAS_PROPIAS_CONSISTENCY.html. Visitar portal azure para acceder resultados.\n"
-     ]
-    }
-   ],
-   "source": [
-    "marcaspropias_validate_column_contents()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
@@ -541,24 +465,6 @@
     "    csv_output_dir = os.environ['datalake_cleandir'] + '/' + os.environ['homologa_workdir'] + '/'\n",
     "    datalake.write_csv(source, csv_output_dir+'homologaciones.csv', sep=\"|\", encoding='utf8')\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "TAREA: homologaciones_validar_cantidad--2023-11-30 08:53:58,804-INFO-WARNING: Validación fallida, continúa.\n",
-      "TAREA: homologaciones_validar_cantidad--2023-11-30 08:53:58,805-INFO-Se genera un archivo privado: /calidad-datos\\validations/homologaciones_validar_cantidad_expectation_suite/__none__/20231130T135326.254271Z/homologaciones_validar_cantidad_source-homologaciones_validar_cantidad_source_CANTIDAD_MARCAS_HOMOLOGACION.html. Visitar portal azure para acceder resultados.\n"
-     ]
-    }
-   ],
-   "source": [
-    "homologaciones_validar_cantidad()"
    ]
   },
   {
