--- a/docs/cyrstal.ipynb
+++ b/docs/cyrstal.ipynb
@@ -45,6 +45,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "a  = datetime.datetime.utcnow().replace(tzinfo=datetime.timezone.utc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2023, 12, 4, 19, 26, 13, 975407, tzinfo=datetime.timezone.utc)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
