inclusión de un test unitario muy sencillo

--- a/docs/usage_example.ipynb
+++ b/docs/usage_example.ipynb
@@ -12,6 +12,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "a = \"DefaultEndpointsProtocol=https;AccountName=azstuiprduenindustria;AccountKey=4dVVEuMGv82+f0NvH5rURoiVM9K4socdrYByQhJd7DIkA6OJVhCj5Gz62G0m64Rj1LpZt6qt48Em+ASte0rLUA==;EndpointSuffix=core.windows.net\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'DefaultEndpointsProtocol': 'https',\n",
+       " 'AccountName': 'azstuiprduenindustria',\n",
+       " 'AccountKey': '4dVVEuMGv82+f0NvH5rURoiVM9K4socdrYByQhJd7DIkA6OJVhCj5Gz62G0m64Rj1LpZt6qt48Em+ASte0rLUA==',\n",
+       " 'EndpointSuffix': 'core.windows.net'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "parse_connection_string(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
