chore(preparacion MVP): limpieza y adición de documentación basica

--- a/docs/usage_example.ipynb
+++ b/docs/usage_example.ipynb
@@ -12,52 +12,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "a = \"DefaultEndpointsProtocol=https;AccountName=azstuiprduenindustria;AccountKey=4dVVEuMGv82+f0NvH5rURoiVM9K4socdrYByQhJd7DIkA6OJVhCj5Gz62G0m64Rj1LpZt6qt48Em+ASte0rLUA==;EndpointSuffix=core.windows.net\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'DefaultEndpointsProtocol': 'https',\n",
-       " 'AccountName': 'azstuiprduenindustria',\n",
-       " 'AccountKey': '4dVVEuMGv82+f0NvH5rURoiVM9K4socdrYByQhJd7DIkA6OJVhCj5Gz62G0m64Rj1LpZt6qt48Em+ASte0rLUA==',\n",
-       " 'EndpointSuffix': 'core.windows.net'}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parse_connection_string(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# remover comentarios si sed quiere instalar la libreria \n",
-    "# publicada en pipy\n",
-    "#%pip uninstall azure-datalake-utils -y\n",
-    "#%pip install -i https://test.pypi.org/simple/ --extra-index-url=https://pypi.org/simple azure-datalake-utils==0.2.0.dev23\n",
-    "#%pip show azure-datalake-utils"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -75,8 +29,6 @@
    "source": [
     "Asegurar crear primero el archivo `.env` con las siguientes variables de ambiente:\n",
     "```\n",
-    "datalake=\"nombre_datalake_cuenta\"\n",
-    "datalake_key=\"xxxkey_datalake_cuenta_zxccxxcx\"\n",
     "AZURE_STORAGE_CONNECTION_STRING=\"aaaa\"\n",
     "CONTENEDOR_VALIDACIONES=\"calidad-datos\" # debe existir en la cuenta.\n",
     "````"
@@ -90,31 +42,6 @@
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import yaml\n",
-    "\n",
-    "with open(\"example.yaml\", \"r\") as stream:\n",
-    "    try:\n",
-    "        print(yaml.safe_load(stream))\n",
-    "    except yaml.YAMLError as exc:\n",
-    "        print(exc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from centraal_dataframework.resources import datalake\n",
-    "info = datalake.read_csv(\"test/test_framework.csv\", sep=\"|\", decimal = \",\").drop(columns=['Unnamed: 0'])"
    ]
   },
   {
@@ -220,33 +147,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "\n",
-    "# Define the URL\n",
-    "url = \"https://centraaldl.blob.core.windows.net/$web/validations/hello_gx_expectation_suite_json/__none__/20231108T144828.004123Z/hello_gx_source-hello_gx_source_test.html\"\n",
-    "\n",
-    "# Define a regular expression pattern to match the parts you want to extract\n",
-    "pattern = r\"https://[\\w.]+/([\\w$]+/[\\w/]+/[\\d]+T[\\d.]+Z)/([\\w-]+)-([\\w-]+)\\.html\"\n",
-    "\n",
-    "# Use re.search to find the matched groups in the URL\n",
-    "match = re.search(pattern, url)\n",
-    "\n",
-    "if match:\n",
-    "    # Extract the matched groups\n",
-    "    container_path = match.group(1) + \"/\" +  match.group(2)\n",
-    "\n",
-    "    # Print the extracted parts\n",
-    "    print(\"Container/Path:\", container_path)\n",
-    "else:\n",
-    "    print(\"No match found in the URL.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%writefile logica_pandas.py\n",
     "\"\"\"Prueba.\"\"\"\n",
     "from centraal_dataframework.tasks import task\n",
@@ -264,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O puedes crear una estructura mas compleja de modulos. en la siguiente celda se crea un modulo dentro de otra carpeta y se usa un decorador para poder usar great expectations."
+    "O puedes crear una estructura mas compleja de modulos. En la siguiente celda se crea un modulo dentro de otra carpeta y se usa un decorador para poder usar great expectations."
    ]
   },
   {
@@ -393,13 +293,6 @@
     "# simular la ejecucion de la tarea.\n",
     "queue_trigger(QueueMessage(body = bytes(\"otra_cosa\",  \"utf-8\")))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
